# openloris-scene-tools

./: LICENSE.txt  README.md
benchmark/: README.md  check_stamps.py  evaluate.py  evaluate_all.py  evaluate_office.py  get_poses_for_aided_reloc.py  openloris_test_ros.py  openloris_tf_data.py  test.yaml
benchmark/data/: gt_cafe_1.txt  gt_corridor_1.txt  gt_home_1.txt  gt_market_1.txt
benchmark/icra20_results/lifelong/ds-slam/: cafe-1.txt  corridor-1.txt  home-1-1.txt  market-1.txt  office-1.txt
benchmark/icra20_results/lifelong/infinitam_aligned_depth/: cafe-1_infinitam-cuda.txt  corridor-1_infinitam-cuda.txt  home-1_infinitam-cuda.txt  market-1_infinitam-cuda.txt  office-1_infinitam-cuda.txt
benchmark/icra20_results/lifelong/maslam/: cafe.txt  corridor.txt  home.txt  market.txt  office.txt
dataprocess/: README.md  add_groundtruth.py  align_depth.py  align_laser_pose_to_mocap_map.py  checkbag.py  extract_data_from_bag.py  filter.sh  final_merge.py  fix_bags.py  fix_packages.py  gaussian_transforms.py  hector_map_construction.launch  hector_tracking.launch  match_traj.py  mergeAccGyr.py  merge_bags.py  merge_imu_topics.py  play_static_tf.py  plot_traj.py  poseupdate_to_slam_out_pose.py  preprocess.py  print_bag_time.py  print_msg.py  remove_duplicated_msgs.py  segway_transforms.py  set_t_from_stamp.py  sync.py  trunc.py
dataprocess/maps/: cafe.yaml  corridor.yaml
dataprocess/tum_evaluate_tools/: associate.py  evaluate_ate.py  evaluate_ate_lifelong.py  evaluate_rpe.py
recorder/: CMakeLists.txt  align_depth.launch  data_collection.launch  lrv-record.cpp
(+207 files in other folders)
